# CuteLogger

./: CMakeLists.txt
include/: Logger.h
src/: Logger.cpp
